<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title"
            android:id="@+id/txtDemo"

            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:layout_toLeftOf="@+id/btnBG"
            android:layout_toStartOf="@+id/btnBG" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:id="@+id/btnBG"
            android:layout_alignParentBottom="false"
            android:layout_toLeftOf="@+id/btnFG"
            android:layout_toStartOf="@+id/btnFG" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground"
            android:id="@+id/btnFG"
            android:layout_alignTop="@+id/btnBG"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />




    </RelativeLayout>

</FrameLayout>