<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:id="@+id/btnBG"
            android:layout_below="@+id/lstFont"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground"
            android:id="@+id/btnFG"
            android:layout_below="@+id/lstFont"
            android:layout_toRightOf="@+id/btnBG"
            android:layout_toEndOf="@+id/btnBG" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title"
            android:id="@+id/txtDemo"
            android:layout_below="@+id/btnBG"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/cmbSize"
            android:spinnerMode="dropdown"
            android:entries="@array/kdsui_font_size"
            android:layout_below="@+id/lstFont"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:id="@+id/lstFont"
            android:clickable="true"
            android:choiceMode="singleChoice"
            android:focusable="true"
            android:layout_gravity="left|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/size"
            android:id="@+id/txtNext"
            android:layout_below="@+id/lstFont"
            android:layout_toLeftOf="@+id/cmbSize"
            android:layout_toStartOf="@+id/cmbSize" />

    </RelativeLayout>

</FrameLayout>