<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:showDividers="middle"
        android:divider="#FFFF00"
        android:layout_height="wrap_content"
        android:weightSum="13">
        <View
            android:layout_width="64dp"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_bg"
            android:visibility="visible" />
        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/id"
            android:layout_weight="1"
            android:id="@+id/txtID"
            android:gravity="center"
            android:background="@color/relations_headers_bg"
            android:textColor="@color/relations_headers_fg" />
        <!--<View-->
        <!--android:layout_width="0.5px"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="#B8B8B8"-->
        <!--android:visibility="visible" />-->
        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/ip"-->
        <!--android:id="@+id/txtIP"-->
        <!--android:background="@drawable/textview_border"-->
        <!--android:layout_weight="4" />-->
        <!--<View-->
        <!--android:layout_width="0.5px"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="#B8B8B8"-->
        <!--android:visibility="visible" />-->
        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/port"-->
        <!--android:id="@+id/txtPort"-->
        <!--android:background="@drawable/textview_border"-->
        <!--android:layout_weight="1" />-->
        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/func"
            android:background="@color/relations_headers_bg"
            android:layout_weight="3.1"
            android:id="@+id/txtFunc"
            android:gravity="center"
            android:textColor="@color/relations_headers_fg" />
        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/expo"
            android:id="@+id/txtExp"
            android:layout_weight="1"
            android:background="@color/relations_headers_bg"
            android:gravity="center"
            android:textColorHighlight="@color/relations_headers_fg"
            android:textColor="@color/relations_headers_fg" />
        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/slave_func"
            android:background="@color/relations_headers_bg"
            android:layout_weight="4.2"
            android:id="@+id/txtBck"
            android:gravity="center"
            android:textColor="@color/relations_headers_fg" />
        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/slave"
            android:background="@color/relations_headers_bg"
            android:layout_weight="1.7"
            android:id="@+id/txtMirror"
            android:gravity="center"
            android:textColor="@color/relations_headers_fg" />

        <View
            android:layout_width="@dimen/relations_headers_separator"
            android:layout_height="fill_parent"
            android:background="@color/relations_headers_fg"
            android:visibility="visible" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status"
            android:background="@color/relations_headers_bg"
            android:layout_weight="2"
            android:id="@+id/txtStatus"
            android:gravity="center"
            android:textColor="@color/relations_headers_fg" />
        <!--<View-->
        <!--android:layout_width="0.5px"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:background="#B8B8B8"-->
        <!--android:visibility="visible" />-->
        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="New"-->
        <!--android:background="@drawable/textview_border"-->
        <!--android:layout_weight="1"-->
        <!--android:id="@+id/txtNew"-->
        <!--android:textColor="#0000ff" />-->
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:showDividers="middle"
        android:divider="#FFFF00"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/listview_border"
        android:paddingBottom="2dp"
        android:weightSum="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lstStations"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"
            android:drawSelectorOnTop="true"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:dividerHeight="2dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtError"
        android:textColor="@android:color/holo_red_light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:showDividers="middle"
        android:divider="#FFFF00"
        android:layout_height="45dp"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/update_to_all"
                android:id="@+id/btnUpdate"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btnDel"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnUpdate"
                android:layout_toStartOf="@+id/btnUpdate" />

            <Button
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:text="@string/new_entry"
                android:id="@+id/btnNew"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnDel" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_id"
                android:id="@+id/btnShowID"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnNew"
                android:layout_toStartOf="@+id/btnNew" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retrieve_from"
                android:id="@+id/btnRetrieve"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnShowID"
                android:layout_toStartOf="@+id/btnShowID" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:id="@+id/btnReset"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btnRetrieve"
                android:layout_toStartOf="@+id/btnRetrieve" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>